- Ajout des plugins Bootstrap 4, jQuery, fontAwesome et Animate ; tous open-source. - Landing page en cours - Création d'un modèle pour les intervenant et détails d'une journée

--- a/EduCode/models/page.ini
+++ b/EduCode/models/page.ini
@@ -1,11 +1,44 @@
 [model]
-name = Page
+name = Landing page
 label = {{ this.title }}
+description = Ceci est la landing page d'educode. Il s'agira d'une single page sauf pour la description détaillée du programme, des intervenant et la réservation.
 
 [fields.title]
 label = Title
 type = string
 
+[fields.baseline]
+label = Baseline
+type = string
+description = Baseline du projet
+
+[fields.overview]
+label = Overview
+type = info
+description = Une vue d'ensemble du programme educode. Lorsqu'on clique sur une date, une page dédiée y est consacrée.
+
+
+[fields.sunday]
+label = Dimanche 26 - Overview du programme
+type = markdown
+description = Que se passera-t-il le dimanche 26 ?
+
+[fields.monday]
+label = Lundi 27 - Overview du programme
+type = markdown
+description = Que se passera-t-il le lundi 27 ?
+
+[fields.thuesday]
+label = Mardi 28 - Overview du programme
+type = markdown
+description = Que se passera-t-il le mardi 28 ?
+
+[fields.wednesday]
+label = Mercredi 29 - Overview du programme
+type = markdown
+description = Que se passera-t-il le mercredi 29 ?
+
 [fields.body]
 label = Body
 type = markdown
+
