- Création des contacts - Création des partenaires - Amélioration design - Adaptation mobile (responsive) - C est encore en chantier, le design sera encore remanié

--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,6 @@ TSWLatexianTemp*
 
 # expex forward references with \gathertags
 *-tags.tex
+
+# pycharm's config files (the IDE I use)
+EduCode/.idea/*
