--- a/EduCode/models/page.ini
+++ b/EduCode/models/page.ini
@@ -12,33 +12,48 @@ label = Baseline
 type = string
 description = Baseline du projet
 
+[fields.about]
+label = À propos
+type = markdown
+description = Description à propos d'EduCode
+
 [fields.overview]
 label = Overview
 type = info
 description = Une vue d'ensemble du programme educode. Lorsqu'on clique sur une date, une page dédiée y est consacrée.
 
-
 [fields.sunday]
 label = Dimanche 26 - Overview du programme
 type = markdown
-description = Que se passera-t-il le dimanche 26 ?
+description = Que se passera-t-il le dimanche 26 ? (en bref)
 
 [fields.monday]
 label = Lundi 27 - Overview du programme
 type = markdown
-description = Que se passera-t-il le lundi 27 ?
+description = Que se passera-t-il le lundi 27 ? (en bref)
 
 [fields.thuesday]
 label = Mardi 28 - Overview du programme
 type = markdown
-description = Que se passera-t-il le mardi 28 ?
+description = Que se passera-t-il le mardi 28 ? (en bref)
 
 [fields.wednesday]
 label = Mercredi 29 - Overview du programme
 type = markdown
-description = Que se passera-t-il le mercredi 29 ?
+description = Que se passera-t-il le mercredi 29 ? (en bref)
 
-[fields.body]
-label = Body
+[fields.expo_about]
+label = Expo - Texte
 type = markdown
+description = Ce texte (markdown) sera placé juste au-dessus du bouton "Devenir exposant".
+
+[fields.inscription_tarif]
+label = Tarif
+type = markdown
+description = Description des tarifs (vous pouvez écrire en markdown.)
+
+[fields.contact]
+label = Contact - Texte
+type = markdown
+description = Ce texte (markdown) sera placé juste au-dessus de la liste des contacts.
 
