Internationalisation - francais, anglais, neerlandais, espagnol, allemand Cela donc fixes #3 Cela se fait via l'interface d'administration.

--- a/EduCode/models/details-program.ini
+++ b/EduCode/models/details-program.ini
@@ -7,6 +7,9 @@ description = Ceci est une page présentant un programme.
 [fields.date]
 label = Date du programme
 type = string
+choices = Dimanche 26, Lundi 27, Mardi 28, Mercredi 29
+choices_labels = Dimanche 26, Lundi 27, Mardi 28, Mercredi 29
+
 
 [fields.description]
 label = Description
