--- a/EduCode/models/page.ini
+++ b/EduCode/models/page.ini
@@ -47,6 +47,11 @@ label = Expo - Texte
 type = markdown
 description = Ce texte (markdown) sera placé juste au-dessus du bouton "Devenir exposant".
 
+[fields.text_button]
+label = Expo - texte dans le button
+type = string
+description = Le texte affiché dans le call to action
+
 [fields.inscription_tarif]
 label = Tarif
 type = markdown
@@ -56,4 +61,9 @@ description = Description des tarifs (vous pouvez écrire en markdown.)
 label = Contact - Texte
 type = markdown
 description = Ce texte (markdown) sera placé juste au-dessus de la liste des contacts.
+
+[fields.practical_infos]
+label = Infos pratiques - Texte
+type = markdown
+description = Ce texte (markdown) sera placé juste au-dessus de la liste des hôtels, lieux, etc.
 
