--- a/EduCode/models/speaker.ini
+++ b/EduCode/models/speaker.ini
@@ -27,8 +27,11 @@ choice_labels = Afghanistan, Albania, Algeria, American Samoa, Andorra, Angola, 
 
 [fields.date]
 label = Date d'intervention
-type = string
+type = select
 description = Date à laquelle l'intervenant interviendra.
+choices = Dimanche 26, Lundi 27, Mardi 28, Mercredi 29
+choices_labels = Dimanche 26, Lundi 27, Mardi 28, Mercredi 29
+
 
 [fields.description]
 label = Description
