ajout des partenaires et lieux, hotels, bruxelles, devenir exposant, devenir partenaire

--- a/EduCode/models/location.ini
+++ b/EduCode/models/location.ini
@@ -11,6 +11,22 @@ type = string
 label = Adressse du lieu
 type = string
 
+[fields.url]
+label = URL du lieu
+type = string
+description = URL du lieu s'il y en a un
+
+[fields.type_location]
+label = Type de lieu
+type = select
+choices = Lieu normal, Hôtel,
+choices_labels = Lieu normal, Hôtel
+
+[fields.code_promo]
+label = Code promo
+type = string
+description = Code promo s'il y en a un
+
 [fields.photo]
 label = Photo
 type = info
