--- a/EduCode/models/page.ini
+++ b/EduCode/models/page.ini
@@ -47,6 +47,11 @@ label = Expo - Texte
 type = markdown
 description = Ce texte (markdown) sera placé juste au-dessus du bouton "Devenir exposant".
 
+[fields.partners_about]
+label = Partenaires - Texte
+type = markdown
+description = Ce texte (markdown) sera placé juste au-dessus de la liste des partenaires.
+
 [fields.text_button]
 label = Expo - texte dans le button
 type = string
@@ -66,4 +71,9 @@ description = Ce texte (markdown) sera placé juste au-dessus de la liste des co
 label = Infos pratiques - Texte
 type = markdown
 description = Ce texte (markdown) sera placé juste au-dessus de la liste des hôtels, lieux, etc.
+
+[fields.practical_infos_brussels]
+label = Infos pratiques - Bruxelles
+type = markdown
+description = Ce texte (markdown) présentera Bruxelles, liens vers attractions, etc.
 
