Ajout des pages dédiées ainsi que traduction de toute la page d accueil possible

--- a/EduCode/models/page.ini
+++ b/EduCode/models/page.ini
@@ -77,3 +77,74 @@ label = Infos pratiques - Bruxelles
 type = markdown
 description = Ce texte (markdown) présentera Bruxelles, liens vers attractions, etc.
 
+[fields.s_about_educode]
+label = Traduisez ceci -> "à propos d'EduCode"
+type = string
+
+[fields.s_overview_program]
+label = Traduisez ceci -> "Overview du programme"
+type = string
+
+[fields.s_speakers]
+label = Traduisez ceci -> "Intervenants"
+type = string
+
+[fields.s_expo]
+label = Traduisez ceci -> "Expositions"
+type = string
+
+[fields.s_partners]
+label = Traduisez ceci -> "Partenaires"
+type = string
+
+[fields.s_our_partners]
+label = Traduisez ceci -> "Nos partenaires"
+type = string
+
+[fields.s_become_partner]
+label = Traduisez ceci -> "Devenez partenaire"
+type = string
+
+[fields.s_registration]
+label = Traduisez ceci -> "Inscription"
+type = string
+
+[fields.s_location]
+label = Traduisez ceci -> "Lieux"
+type = string
+
+[fields.s_practical_infos]
+label = Traduisez ceci -> "Infos pratiques"
+type = string
+
+[fields.s_hotel]
+label = Traduisez ceci -> "Hôtel"
+type = string
+
+[fields.s_press]
+label = Traduisez ceci -> "Presse"
+type = string
+
+[fields.s_contact]
+label = Traduisez ceci -> "Contact"
+type = string
+
+[fields.s_more_infos]
+label = Traduisez ceci -> "Plus d'infos"
+type = string
+
+[fields.s_sunday]
+label = Traduisez ceci -> "Dimanche"
+type = string
+[fields.s_monday]
+label = Traduisez ceci -> "Lundi"
+type = string
+
+[fields.s_thuesday]
+label = Traduisez ceci -> "Mardi"
+type = string
+
+[fields.s_wednesday]
+label = Traduisez ceci -> "Mercredi"
+type = string
+
