--- a/EduCode/models/page.ini
+++ b/EduCode/models/page.ini
@@ -7,6 +7,22 @@ description = Ceci est la landing page d'educode. Il s'agira d'une single page s
 label = Title
 type = string
 
+[fields.s_intro_location_city]
+label = Traduisez ceci -> "Bruxelles, Belgique"
+type = string
+
+[fields.s_intro_dates]
+label = Traduisez ceci -> "27-29 août 2018"
+type = string
+
+[fields.s_intro_location_institutions]
+label = Traduisez ceci -> "Bozar, ESI & ISIB"
+type = string
+
+[fields.s_intro_location_institutions_2]
+label = Traduisez ceci -> "Académie royale"
+type = string
+
 [fields.baseline]
 label = Baseline
 type = string
