Plusieurs changements dont :
- Ajout du menu appel a soumission
- Ajout de la partie presse
- L upload de fichier est deja implemente de base dans lektor
- Fix d erreurs
- Ajout de la partie appel a soumission dans le site

--- a/EduCode/models/page.ini
+++ b/EduCode/models/page.ini
@@ -68,10 +68,26 @@ label = Partenaires - Texte
 type = markdown
 description = Ce texte (markdown) sera placé juste au-dessus de la liste des partenaires.
 
+[fields.press_text]
+label = Texte conférence de presse
+type = markdown
+description = Texte à afficher dans la partie presse
+
+[fields.submissions_text]
+label = Texte appel à soumission
+type = markdown
+description = Texte à afficher dans la partie "appel à soumission"
+
+
 [fields.text_button]
 label = Expo - texte dans le button
 type = string
 description = Le texte affiché dans le call to action
+
+[fields.registration]
+label = Inscription - texte
+type = markdown
+description = Texte descriptif sous la section Inscription
 
 [fields.inscription_tarif]
 label = Tarif
@@ -104,7 +120,12 @@ type = string
 [fields.s_speakers]
 label = Traduisez ceci -> "Intervenants"
 type = string
-
+[fields.s_submissions]
+label = Traduisez ceci -> "Appel à soumission"
+type = string
+[fields.s_submit_here]
+label = Traduisez ceci -> "Soumettez ici"
+type = string
 [fields.s_expo]
 label = Traduisez ceci -> "Expositions"
 type = string
@@ -164,3 +185,6 @@ type = string
 label = Traduisez ceci -> "Mercredi"
 type = string
 
+[fields.s_may]
+label = Traduisez ceci -> "Mai"
+type = string
