fix traductions et bugs

--- a/EduCode/models/page.ini
+++ b/EduCode/models/page.ini
@@ -113,6 +113,10 @@ description = Ce texte (markdown) présentera Bruxelles, liens vers attractions,
 label = Traduisez ceci -> "à propos d'EduCode"
 type = string
 
+[fields.s_program]
+label = Traduisez ceci -> "Programme"
+type = string
+
 [fields.s_overview_program]
 label = Traduisez ceci -> "Overview du programme"
 type = string
@@ -173,6 +177,7 @@ type = string
 [fields.s_sunday]
 label = Traduisez ceci -> "Dimanche"
 type = string
+
 [fields.s_monday]
 label = Traduisez ceci -> "Lundi"
 type = string
@@ -183,6 +188,21 @@ type = string
 
 [fields.s_wednesday]
 label = Traduisez ceci -> "Mercredi"
+type = string
+
+[fields.s_sunday_26]
+label = Traduisez ceci -> "Dimanche 26"
+type = string
+[fields.s_monday_27]
+label = Traduisez ceci -> "Lundi 27"
+type = string
+
+[fields.s_thuesday_28]
+label = Traduisez ceci -> "Mardi 28"
+type = string
+
+[fields.s_wednesday_29]
+label = Traduisez ceci -> "Mercredi 29"
 type = string
 
 [fields.s_may]
