Ajout partie blog
fix #10 #9 il est désormais possible de créer des articles de blogs, un espace commentaire est associé à chaque article.

--- a/EduCode/models/blog-post.ini
+++ b/EduCode/models/blog-post.ini
@@ -1,28 +1,22 @@
 [model]
 name = Blog Post
 label = {{ this.title }}
-hidden = yes
+hidden = no
 
 [fields.title]
-label = Title
+label = Titre
 type = string
 size = large
 
 [fields.author]
-label = Author
+label = Auteur
 type = string
 width = 1/2
-
-[fields.twitter_handle]
-label = Twitter Handle
-type = string
-width = 1/4
-addon_label = @
 
 [fields.pub_date]
 label = Publication date
 type = date
-width = 1/4
+width = 1/2
 
 [fields.body]
 label = Body
