Création page presse avec documents téléchargeables
La page est accessible également depuis la section "presse" de la page d'accueil.

--- a/EduCode/models/press.ini
+++ b/EduCode/models/press.ini
@@ -6,8 +6,20 @@ description = Ceci est un page de presse
 
 [fields.body]
 label = Texte avant le listing des documents
-type = info
-description = Veuillez rajouter un logo du partenaire grâce au bouton Joindre un fichier dans le menu à gauche.
+type = markdown
+
+[fields.s_descr_downloadable]
+label = Traduisez ceci -> "Documents téléchargeables"
+type = string
+
+
+[fields.s_download]
+label = Traduisez ceci -> "Télécharger"
+type = string
+
+[fields.s_description]
+label = Traduisez ceci -> "Description"
+type = string
 
 [attachments]
 enabled=yes
