--- a/EduCode/models/page.ini
+++ b/EduCode/models/page.ini
@@ -102,7 +102,12 @@ description = Ce texte (markdown) sera placé juste au-dessus de la liste des co
 [fields.practical_infos]
 label = Infos pratiques - Texte
 type = markdown
-description = Ce texte (markdown) sera placé juste au-dessus de la liste des hôtels, lieux, etc.
+description = Ce texte (markdown) sera placé juste au-dessus de la liste des lieux.
+
+[fields.practical_infos_hostels]
+label = Infos pratiques - Texte
+type = markdown
+description = Ce texte (markdown) sera placé juste au-dessus de la liste des hôtels.
 
 [fields.practical_infos_brussels]
 label = Infos pratiques - Bruxelles
