--- a/EduCode/models/partner.ini
+++ b/EduCode/models/partner.ini
@@ -17,5 +17,11 @@ label = Photo
 type = info
 description = Veuillez rajouter un logo du partenaire grâce au bouton Joindre un fichier dans le menu à gauche.
 
+[fields.priority]
+label = Ordre de priorité
+type = string
+description = Plus l'entier est grand, plus le partenaire sera prioritaire.
+
 [attachments]
 enabled=yes
+
