Ajout champ facebook et LinkedIn
Ajout des champs Facebook et LinkedIn pour les intervenants.

--- a/EduCode/models/speaker.ini
+++ b/EduCode/models/speaker.ini
@@ -37,6 +37,30 @@ type = string
 description = URL du profil twitter.
 width = 1/2
 
+[fields.fb_id]
+label = Id Facebook
+type = string
+description = ID Facebook de l'intervenant.
+width = 1/2
+
+[fields.fb_url]
+label = URL du profil Facebook
+type = string
+description = URL du profil Facebook.
+width = 1/2
+
+[fields.linkedin_id]
+label = Id LinkedIn
+type = string
+description = ID LinkedIn de l'intervenant.
+width = 1/2
+
+[fields.linkedin_url]
+label = URL du profil LinkedIn
+type = string
+description = URL du profil LinkedIn.
+width = 1/2
+
 [fields.riot_id]
 label = Id riot
 type = string
