--- a/EduCode/models/speaker.ini
+++ b/EduCode/models/speaker.ini
@@ -18,6 +18,13 @@ label = E-mail
 type = string
 description = E-mail de l'intervenant.
 
+[fields.dates]
+label = Dates d'intervention
+type = checkboxes
+description = Dates auxquelles l'intervenant interviendra.
+choice_labels = Dimanche 26, Lundi 27, Mardi 28, Mercredi 29
+choices = dimanche-26-aout, lundi-27-aout, mardi-28-aout, mercredi-29-aout
+
 [fields.date]
 label = Date d'intervention
 type = select
