ateliers et modifs

--- a/EduCode/models/workshop.ini
+++ b/EduCode/models/workshop.ini
@@ -18,10 +18,21 @@ type = select
 choices = primaire, secondaire, tous 
 choices_labels = Primaire, Secondaire, Tous
 
+[fields.language]
+label = language
+type = select
+choices = fr, en, nl, es
+choices_labels = français, anglais, néerlandais, espagnol
+
 [fields.age]
 label = Age
 type = string
 description = Description de la classe d'âge
+
+[fields.number]
+label = number
+type = integer
+description = Nombre d'apprenants
 
 [fields.periodes]
 label = Périodes
