Avancement (et fin ?) page concert
- Chrome v66 ayant changé ses policies, il n'est pas possible d'autoplay un son sans que l'utilisateur n'ait préalablement intéragi avec la page web (click, touch, etc)

- Les autres browsers ne sont pas affectés par cette règle (mais bon, Chrome domine le marché des browsers avec en moyenne 50-60% des parts du marché)

--- a/EduCode/models/workshop.ini
+++ b/EduCode/models/workshop.ini
@@ -48,5 +48,35 @@ label = Prénom Nom
 type = string
 description = Prénom Nom du responsable de l'atelier
 
+[fields.location]
+label = Lieu
+type = string
+width = 1/2
+description = Lieu avec (a) un numéro ou nom ; (b) Un site (ESI, ISIB ou BeCentral)
+
+[fields.local]
+label = Local
+type = string
+width = 1/2
+description = Voir listes fournies par ESI et ISIB et BeCentral
+
+
+[fields.required_materials]
+label = Matériel nécessaire
+type = checkboxes
+choice_labels = Ordinateur, Tablette, Smartphone, papier - crayon - gomme, autre
+choices = Ordinateur, Tablette, Smartphone, papier - crayon - gomme, autre
+
+[fields.maximum_subscribed]
+label = Nombre maximum d'inscrits
+type = string
+
+[fields.hours]
+label = Heures de début et de fin
+type = markdown
+choice_labels = Ordinateur, Tablette, Smartphone, papier - crayon - gomme, autre
+choices = Ordinateur, Tablette, Smartphone, papier - crayon - gomme, autre
+
+
 [attachments]
 enabled=yes
