Avancement page ateliers
- Filtres par catégorie et tranche d'âge fait
- Besoin de savoir quels sont les autres filtres
- Reste à réagencer proprement la liste des ateliers en forme de liste contigues (pour le moment, ceux filtrés sont juste cachés)

--- a/EduCode/models/workshop.ini
+++ b/EduCode/models/workshop.ini
@@ -25,9 +25,19 @@ choices = fr, en, nl, es
 choices_labels = français, anglais, néerlandais, espagnol
 
 [fields.age]
-label = Age
+label = Classe d'âge
 type = string
 description = Description de la classe d'âge
+
+[fields.age_min]
+label = Age minimum
+type = integer
+width='1/2'
+
+[fields.age_max]
+label = Age maximum
+type = integer
+width='1/2'
 
 [fields.number]
 label = number
@@ -74,8 +84,6 @@ type = string
 [fields.hours]
 label = Heures de début et de fin
 type = markdown
-choice_labels = Ordinateur, Tablette, Smartphone, papier - crayon - gomme, autre
-choices = Ordinateur, Tablette, Smartphone, papier - crayon - gomme, autre
 
 
 [attachments]
